set up new paths
