# docs/swagger.yaml
@@ -138,6 +138,12 @@ paths:
       consumes:
       - application/json
       description: lists tags
+      parameters:
+      - description: id of the gateway
+        in: path
+        name: gateway_id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
